--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "private": "true",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --watch"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/billyhelms24/to-do-list#readme",
     "devDependencies": {
+        "html-webpack-plugin": "^5.3.1",
         "webpack": "^5.33.2",
         "webpack-cli": "^4.6.0"
     },
