--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "private": "true",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "webpack --watch",
+        "start": "webpack serve --open",
         "build": "webpack"
     },
     "repository": {
@@ -20,9 +22,12 @@
     },
     "homepage": "https://github.com/billyhelms24/to-do-list#readme",
     "devDependencies": {
+        "css-loader": "^5.2.1",
         "html-webpack-plugin": "^5.3.1",
+        "style-loader": "^2.0.0",
         "webpack": "^5.33.2",
-        "webpack-cli": "^4.6.0"
+        "webpack-cli": "^4.6.0",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "lodash": "^4.17.21"
