--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
     "name": "to-do-list",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
-    "private": "true",
+    "main": "webpack.config.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "watch": "webpack --watch",
-        "start": "webpack serve --open",
-        "build": "webpack"
+        "build": "webpack --mode production",
+        "watch": "webpack --watch"
     },
     "repository": {
         "type": "git",
@@ -22,14 +19,14 @@
     },
     "homepage": "https://github.com/billyhelms24/to-do-list#readme",
     "devDependencies": {
-        "css-loader": "^5.2.1",
-        "html-webpack-plugin": "^5.3.1",
+        "bulma": "^0.9.2",
+        "css-loader": "^5.2.4",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "mini-css-extract-plugin": "^1.5.0",
+        "node-sass": "^5.0.0",
+        "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
-        "webpack": "^5.33.2",
-        "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2"
-    },
-    "dependencies": {
-        "lodash": "^4.17.21"
+        "webpack": "^5.34.0",
+        "webpack-cli": "^4.6.0"
     }
 }
