--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
         "style-loader": "^2.0.0",
         "webpack": "^5.34.0",
         "webpack-cli": "^4.6.0"
+    },
+    "dependencies": {
+        "date-fns": "^2.21.1"
     }
 }
